k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: todo-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
